# abscribe

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  email.py  package-lock.json  package.json
abscribe_backend/: .env.example  .flaskenv  README.md  pyproject.toml
abscribe_backend/abscribe_backend/: __init__.py  app.py
abscribe_backend/abscribe_backend/models/: chunk.py  document.py  feedback_item.py  feedback_item_chunk.py  feedback_item_doc.py  feedback_item_version.py  feedback_list.py  recipe.py  version.py
abscribe_backend/abscribe_backend/services/: chatgpt_service.py  chunk_service.py  document_service.py  email_service.py  feedback_item_chunk_service.py  feedback_item_document_service.py  feedback_item_version_service.py  feedback_list_service.py  recipe_service.py  version_service.py
abscribe_backend/tests/: test_api.py  test_chunk_service.py  test_document_service.py  test_feedback_service.py  test_recipe_service.py  test_version_service.py
abscribe_frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
abscribe_frontend/src/: ErrorPage.jsx  index.css  index.jsx
abscribe_frontend/src/resources/: eustressEmail.js  example_richtext.html  playground-1.mongodb.js
abscribe_frontend/src/routes/: Root.jsx
abscribe_frontend/src/scss/: chat.scss  docs.scss  documentcontainer.scss  documentlist.scss  editor.scss  home.scss  ideabucket.scss  llmtoolbar.scss  popuptoolbar.scss  refinementrecipes.scss  variationsidebar.scss  viewer.scss
abscribe_frontend/src/services/: abscribeAPI.js  chunkService.js  documentService.js  (+3 more)
(+18 files in other folders)
