[tool.poetry]
name = "abscribe-backend"
version = "0.1.0"
description = "the flask backend for abscribe. Connects to a mongodb instance, mooclet instance, and the react frontend"
authors = ["Nathan Laundry, Mohi Reza"]
license = "MIT"
readme = "README.md"
packages = [{include = "abscribe_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
mongoengine = "^0.27.0"
flask-mongoengine = "^1.0.0"
python-dotenv = "^1.0.0"
flask-cors = "^3.0.10"
resend = "^0.5.1"
openai = "^0.28.1"
gunicorn = {extras = ["gevent"], version = "^21.2.0"}
gevent = "^23.9.1"

[tool.poetry.group.dev.dependencies]
Flask = "2.2.3"
pymongo = "^4.3.3"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
start = "abscribe_backend.app:main"
